level-4/ft_atoi/trace/4-0-ft_atoi.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r5p43.42.us.org
Darwin 17.4.0 x86_64
$> date
Fri Mar 29 21:12:30 PDT 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/piscine-c-exam00/exam_20190330/esupatae

= Git history ==================================================================
$> git -C /var/folders/jq/3s3bzt0d0qqbjv7j8j5vd0bc0000gp/T/tmpEeLRLX/user log --pretty='%H - %an, %ad : %s'
1609c9fb8dde86e39eb94bec86b4d3085e56e924 - Exam 42, Fri Mar 29 21:12:07 2019 -0700 : With God's blessing, I hope this last one works :))
31bb88b5c093aea6075fc0d1e662489b4c073fc5 - Exam 42, Fri Mar 29 19:13:07 2019 -0700 : Fourth assignment completed!
f4eb057df54e0cac21a86e294bb6438ec54d1b75 - Exam 42, Fri Mar 29 18:54:45 2019 -0700 : Finished third exercise!
537a06f4cf773492580f34f09cf41fe781de54b5 - Exam 42, Fri Mar 29 18:34:11 2019 -0700 : Finished second assignment!
ec618e6fefbe4d7d61a19260606d02e58c6a84e7 - Exam 42, Fri Mar 29 18:21:32 2019 -0700 : First assignment complete
 
= Collected files ==========================================
$> ls -lAR /var/folders/jq/3s3bzt0d0qqbjv7j8j5vd0bc0000gp/T/tmpEeLRLX/user
total 8
-rw-r--r--  1 deepthought  deepthought  1302 Mar 29 21:12 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Mar 29 21:12 ft_atoi
drwxr-xr-x  3 deepthought  deepthought   102 Mar 29 21:12 ft_countdown
drwxr-xr-x  3 deepthought  deepthought   102 Mar 29 21:12 ft_swap
drwxr-xr-x  3 deepthought  deepthought   102 Mar 29 21:12 maff_revalpha
drwxr-xr-x  3 deepthought  deepthought   102 Mar 29 21:12 only_z

/var/folders/jq/3s3bzt0d0qqbjv7j8j5vd0bc0000gp/T/tmpEeLRLX/user/ft_atoi:
total 8
-rw-r--r--  1 deepthought  deepthought  1359 Mar 29 21:12 ft_atoi.c

/var/folders/jq/3s3bzt0d0qqbjv7j8j5vd0bc0000gp/T/tmpEeLRLX/user/ft_countdown:
total 8
-rw-r--r--  1 deepthought  deepthought  1087 Mar 29 21:12 ft_countdown.c

/var/folders/jq/3s3bzt0d0qqbjv7j8j5vd0bc0000gp/T/tmpEeLRLX/user/ft_swap:
total 8
-rw-r--r--  1 deepthought  deepthought  972 Mar 29 21:12 ft_swap.c

/var/folders/jq/3s3bzt0d0qqbjv7j8j5vd0bc0000gp/T/tmpEeLRLX/user/maff_revalpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1396 Mar 29 21:12 maff_revalpha.c

/var/folders/jq/3s3bzt0d0qqbjv7j8j5vd0bc0000gp/T/tmpEeLRLX/user/only_z:
total 8
-rw-r--r--  1 deepthought  deepthought  1011 Mar 29 21:12 only_z.c
 
= ft_atoi ======================================================================
$> gcc -Wextra -Wall -Werror main.c ft_atoi.c -o user_exe 
ft_atoi.c:32:4: error: implicitly declaring library function 'printf' with type 'int (const char *, ...)' [-Werror,-Wimplicit-function-declaration]
                        printf("%d,", result);
                        ^
ft_atoi.c:32:4: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
